--- a/app/globals.css
+++ b/app/globals.css
@@ -108,7 +108,7 @@
     background-color: hsl(var(--background));
     color: hsl(var(--foreground));
     font-family: var(--font-inter), Inter, system-ui, -apple-system, sans-serif;
-    font-feature-settings: "rlig" 1, "calt" 1;
+    /* font-feature-settings disabled to fix 's' character rendering issue */
   }
   
   /* Mobile View - 20% Smaller */
